fix toggle position on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -149,8 +149,9 @@ html * {
 }
 
 .toggle_caught_switch {
-  height: 100%;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-top: 4px;
 }
